--- a/Kopiec/CMakeLists.txt
+++ b/Kopiec/CMakeLists.txt
@@ -12,7 +12,7 @@ file(GLOB_RECURSE SRC ${CMAKE_SOURCE_DIR}/source/*.cpp)
 
 find_package(GTest REQUIRED)
 
-add_subdirectory(${CMAKE_SOURCE_DIR}/lib)
+# add_subdirectory(${CMAKE_SOURCE_DIR}/lib)
 
 add_executable(program main.cpp)
 add_executable(runTests test/test_heap.cpp)
@@ -21,5 +21,5 @@ target_include_directories(program PUBLIC BEFORE ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(runTests PUBLIC BEFORE ${CMAKE_SOURCE_DIR}/include)
 
 
-target_link_libraries(program PUBLIC heap)
-target_link_libraries(runTests ${GTEST_LIBRARIES} pthread heap)
+# target_link_libraries(program PUBLIC heap)
+target_link_libraries(runTests ${GTEST_LIBRARIES} pthread)
