One general test, comparing STL priority queue and implemented binomial heap

--- a/Kopiec dwumianowy/CMakeLists.txt
+++ b/Kopiec dwumianowy/CMakeLists.txt
@@ -15,12 +15,12 @@ find_package(GTest REQUIRED)
 add_subdirectory(${CMAKE_SOURCE_DIR}/lib)
 
 add_executable(program main.cpp)
-# add_executable(runBSTTests tests/test_BST.cpp)
-# add_executable(runAVLTests tests/test_AVL.cpp)
+add_executable(runTests test/test_binomial.cpp)
+
+
 target_include_directories(program PUBLIC BEFORE ${CMAKE_SOURCE_DIR}/include)
-# target_include_directories(runBSTTests PUBLIC BEFORE ${CMAKE_SOURCE_DIR}/Include)
-# target_include_directories(runAVLTests PUBLIC BEFORE ${CMAKE_SOURCE_DIR}/Include)
+target_include_directories(runTests PUBLIC BEFORE ${CMAKE_SOURCE_DIR}/include)
+
 
 target_link_libraries(program PUBLIC binomial_heap)
-# target_link_libraries(runBSTTests ${GTEST_LIBRARIES} pthread trees)
-# target_link_libraries(runAVLTests ${GTEST_LIBRARIES} pthread trees)
+target_link_libraries(runTests ${GTEST_LIBRARIES} pthread binomial_heap)
